# VK-Ads-auto

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.kotbot  Dockerfile.userbot  PROJECT.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
bot/: access.py  api_client.py  keyboards.py  kotbot_watch.py  main.py  menu.py  states.py  userbot_watch.py
config/: settings.py
core/: app.py  ratelimit.py
db/: base.py  models.py  repositories.py  session.py
docs/: BRIEF_SPEC.md  DECISIONS.md  DEPLOY.md  N8N.md  ROADMAP.md  ДИЗАЙН-СИСТЕМА.md
infra/: Caddyfile
integrations/: adapter.py  channels.py  kotbot_playwright.py  senler.py  stub.py  vk_api.py
kotbot/: __init__.py  adsvk_flow.py  backend.py  config.py  main.py  pageapi.py  selectors.py  service.py  store.py
services/: admin_auth.py  auth_magiclink.py  brief_fields.py  brief_invite.py  brief_parser.py  brief_view.py  briefs.py  cabinet_email.py  cabinet_stats.py  contact.py  creative_intake.py  creative_store.py  creative_validate.py  edit_parser.py  goals.py  invite_tracking.py  invites.py  launch.py  launch_service.py  mapping.py  mock_gate.py  notifier.py  notifier_telegram.py  password.py  referral.py  session_token.py  stats.py  telegram_send.py
tests/: _userbot_fakes.py  test_adapter_contract.py  test_adapter_skeletons.py  test_admin_auth.py  test_admin_data_endpoint.py  test_admin_endpoint.py  test_api_client_kotbot.py  test_api_v1.py  test_auth_magiclink.py  test_bot.py  test_bot_admin_handler.py  test_bot_brief_card_handler.py  test_bot_creative_handler.py  test_bot_help_handler.py  test_bot_link_kotbot_handler.py  test_bot_link_userbot_handler.py  test_bot_navigation.py  test_bot_send_brief_handler.py  test_bot_stats_handler.py  test_bot_stranger.py  test_brief_detail_endpoint.py  test_brief_endpoint.py  test_brief_fields.py  test_brief_intake.py  test_brief_invite.py  test_brief_invite_repo.py  test_brief_parser.py  test_brief_token.py  test_briefs_receive_token.py  (+55 more)
(+62 files in other folders)
