[project]
name = "vk-ads-auto"
version = "0.0.0"
description = "Система автоматизации запуска рекламы в VK Ads через Telegram-бот"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.30",
    "redis>=5.2",
    "aiogram>=3.13",
    "httpx>=0.28",
    "aiosmtplib>=3.0",
    "telethon>=1.36",
    "cryptography>=43.0",
    "playwright>=1.49",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "httpx>=0.28",
    "anyio>=4.6",
    "aiosqlite>=0.20",
    "respx>=0.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "bot", "services", "integrations", "db", "config", "userbot", "kotbot"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["core", "bot", "services", "integrations", "db", "config", "userbot", "kotbot", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "ASYNC"]

[tool.ruff.lint.per-file-ignores]
# Сгенерированные alembic-миграции: не навязываем строки/импорты.
"db/migrations/versions/*" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
plugins = ["pydantic.mypy"]
files = ["core", "bot", "services", "integrations", "db", "config", "userbot", "kotbot", "tests"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
# Telethon не поставляет типовые стабы — импорты без типов.
module = ["telethon.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Сгенерированные alembic-миграции — вне строгой типизации.
module = ["db.migrations.*"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
